--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,15 +1,14 @@
-@import 'colors.css';
+@define-color foreground #afbbe5;
+@define-color background #0e1716;
 
 @define-color workspaces rgba(0, 0, 0, 0.6);
 @define-color clock @foreground;
 @define-color devices rgba(0, 0, 0, 0.6);
 @define-color system rgba(0, 0, 0, 0.4);
-/* workspace text colors */
 @define-color workspace_fg @foreground;
 @define-color act_wrk_fg rgba(0, 0, 0, 1);
 @define-color act_wrk_bg rgba(255, 255, 255, 0.8);
-@define-color use_wrk_fg @color5;
-/* workspace button-background colors */
+@define-color use_wrk_fg #5473C9;
 @define-color workspace_bg rgba(0, 0, 0, 0.6);
 
 * {
@@ -36,7 +35,7 @@ tooltip {
 
 /* Only focused workspace*/
 #workspaces button.active {
-    color:  @act_wrk_fg;
+    color: @act_wrk_fg;
     background: @act_wrk_bg;
     border: none;
     padding: 1px 2px;
@@ -46,7 +45,7 @@ tooltip {
 
 /* Unfocused workspace WITH opened Apps
    !!! Border style is valid for ALL buttons,
-   Set seperate border style for every button. */
+   Set separate border style for every button. */
 #workspaces button {
     color: @workspace_fg;
     background: @workspace_bg;
@@ -69,6 +68,10 @@ tooltip {
       #workspaces button:not(.active) usw.
 */
 
+#custom-spotube-meta {
+    margin: 0 0.5em;
+}
+
 #clock {
     font-weight: bold;
     font-size: 1.3rem;
@@ -76,9 +79,17 @@ tooltip {
     opacity: 1;
 }
 
-#cpu, #memory, 
-#bluetooth, #pulseaudio, #backlight, 
-#devices, #system, #battery, #network, #custom-power {
+#cpu,
+#memory,
+#bluetooth,
+#pulseaudio,
+#backlight,
+#devices,
+#system,
+#network,
+#custom-kb-layout,
+#battery,
+#custom-power {
     padding: 0px 0.8em;
 }
 
@@ -86,49 +97,54 @@ tooltip {
     padding-right: 1em;
 }
 
-#l-workspaces, #r-workspaces, #l-devices, #r-devices, #l-system, #r-system {
-background: transparent;
-min-height:0px;
+#l-workspaces,
+#r-workspaces,
+#l-devices,
+#r-devices,
+#l-system,
+#r-system {
+    background: transparent;
+    min-height: 0px;
 }
 
 #l-workspaces {
-border-left: 15px solid transparent;
-border-bottom: 30px solid @workspaces;
+    border-left: 15px solid transparent;
+    border-bottom: 30px solid @workspaces;
 }
 
 #r-workspaces {
-border-left: 15px solid @workspaces;
-border-bottom: 30px solid transparent;
+    border-left: 15px solid @workspaces;
+    border-bottom: 30px solid transparent;
 }
 
 #workspaces {
-background: @workspaces;
+    background: @workspaces;
 }
 
 #l-devices {
-border-left: 15px solid transparent;
-border-bottom: 30px solid @devices;
+    border-left: 15px solid transparent;
+    border-bottom: 30px solid @devices;
 }
 
 #r-devices {
-border-left: 15px solid @devices;
-border-bottom: 30px solid transparent;
+    border-left: 15px solid @devices;
+    border-bottom: 30px solid transparent;
 }
 
 #devices {
-background: @devices;
+    background: @devices;
 }
 
 #l-system {
-border-left: 15px solid transparent;
-border-bottom: 30px solid @system;
+    border-left: 15px solid transparent;
+    border-bottom: 30px solid @system;
 }
 
 #r-system {
-border-left: 15px solid @system;
-border-bottom: 30px solid transparent;
+    border-left: 15px solid @system;
+    border-bottom: 30px solid transparent;
 }
 
 #system {
-background: @system;
+    background: @system;
 }
